tests/stage2/t3_diagnostics/type_errors/unresolved_method_option.fuse
// EXPECTED ERROR:
// no method `unwrap` on type `Option<Int>`
// did you forget `import stdlib.core.option`?

@entrypoint
fn main() {
  val maybe: Option<Int> = Some(42)
  val value = maybe.unwrap()
  println(value)
}
